# Chloe2.0

./: .gitignore  CHLOE_2.0.md  CLAUDE.md  Chloe 2.0 _single file_.html  Chloe Dashboard.html  EXPLANATION.md  PLAN.md  TRANSITIONTOAGI.md  chloe.db-shm  chloe.db-wal  chloe.db.bak.1778442217  chloe.db.corrupted.bak  chloe.sh  dev-log.md  instruction.md  new_ideas.md  pyproject.toml
.github/workflows/: deploy.yml
PRD/: A-01-done.md  A-02-done.md  A-03-done.md  A-04-done.md  A-05-done.md  A-06-done.md  A-07-done.md  A-08-done.md  A-09-done.md  A-10-done.md  A-11-done.md  A-12-done.md  A-13-done.md  A-14-done.md  Additional_features.md  B-01-done.md  B-02-done.md  B-03-done.md  B-04.md  B-05-done.md  B-06.md  B-07-done.md  B-08.md  B-09.md  B-10-done.md  C-01-done.md  C-02.md  C-03-done.md  C-04-done.md  C-05.md  C-06.md  C-07.md  C-08-done.md  C-09-done.md  C-10-done.md  C-11-done.md  C-12-done.md  C-13-done.md  D-01.md  D-02.md  (+78 more)
app/: avatar.jsx  chat.jsx  data.js  garden.jsx  main.jsx  styles.css  tabs.jsx  vitals.jsx
chloe/: app.py  chloe.py  config.py  loop.py
chloe/actions/: audit.py  budget.py  confirm.py  deliberate.py  gate.py  leash.py  schema.py
chloe/admin/: api.py  shadow_routes.py
chloe/affect/: arc.py  continuity.py  dims.py  label.py  vitals.py
chloe/channels/: chat_api.py  confirm_routes.py  dashboard_routes.py  dashboard_ws.py  ha_prefs_routes.py  intercept.py  mobile_routes.py  mobile_ws.py  push.py  (+4 more)
docs/: agent-prompt  agent-teams-patterns.md  agent-teams-reference.md
frontend/: vite.config.ts
ops/: backfill_artifact_refs.py  backup.sh  bootstrap.sh  chloe.service  deploy.sh  migrate_json_to_kv.py  nginx.conf  seed.sql  setup.sh
tests/: conftest.py
(+230 files in other folders)
