[project]
name = "chloe"
version = "2.0.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "anthropic",
    "chromadb",
    "structlog",
    "prometheus-client",
    "httpx",
    "python-ulid",
    "PyNaCl",
    "cryptography",
    "hypothesis",
    "pytest",
    "pytest-asyncio",
    "PyJWT[cryptography]",
    "google-auth",
    "httpx[http2]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires external services",
    "live: hits real vendor APIs",
]

[tool.ruff]
line-length = 100
