[project]
name = "chloe"
version = "2.0.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "anthropic",
    "chromadb",
    "structlog",
    "prometheus-client",
    "httpx",
    "python-ulid",
    "PyNaCl",
    "cryptography",
    "hypothesis",
    "pytest",
    "pytest-asyncio",
    "PyJWT[cryptography]",
    "google-auth",
    "httpx[http2]",
    "google-genai",
    "python-dotenv",
    "typer",
    "rich",
]

[project.scripts]
chloe = "chloe.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires external services",
    "live: hits real vendor APIs",
    "shadow: replay harness CI tests",
]

[tool.ruff]
line-length = 100
